2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/automated-engraving/index.html: spice up toc.

	* site/download/index.html (href): add slackware download.

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/index.html (href): add planetccrma news.

2003-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Update.

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/index.html (href): update RH planetccrma listing.

	* site/index.html (different): ms manners iso. miss manners

2003-08-11  Graham Percival  <gperlist@shaw.ca>

	* site/index.html: fix spelling (esthetics -> aesthetics).

	* site/switch/testimonials.html: edit quote, add minor personal info.

	* site/devel/participating/index.html: add a note about proofreading.

2003-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* format-page.py: make the >  for separate entry.
	
	* format-page.py (button_row_spacer): surround tabs by spacer
	lines

	* site/about/automated-engraving/software.html (src): move all
	next links to right.

	* colors.css (a): add file for colored tab experiment

	* site/images/hader-slaan.jpeg: rename.

	* format-page.py (grab_title): (c) notice.

2003-08-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/index.html (href): fix URL.
	kroeger deb to 1.8

	* site/index.html (href): tweaks to improve doc link visibility

	* site/download/getting-started.html (href): remove lilypond icon.

	* site/switch/testimonials.html: add Carter's quote.

	* site/switch/index.html: change gorgeous to beautiful. Being
	modest gives a better impression. 

	* site/: spelling fixes, courtesy Chris Jackson.

2003-08-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (href): Fix cygwin links.

	* site/about/doneet.html (href): Fix participating link.

	* site/switch/testimonials.html (href): Typo.

2003-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Apply Anthony's changes for Debian.