@@ -53,6 +53,15 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 <td width="55%">
 <dl>
   <dt>
+    August 28, 2003
+  </dt>
+  <dd>
+  LilyPond 1.9.2 is released. Read the
+  <a href="http://lilypond.org/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+  release notes</a> and get it
+    <a href="download#1.9">here</a>.
+  </dd>
+  <dt>
     August 26, 2003
   </dt>
   <dd>
@@ -81,14 +90,6 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 <a href="http://rpm.nyvalls.se/sound9.1.html">here</a>.
   </dd>
   
-  <dt>
-    August 21, 2003
-  </dt>
-  <dd>
-
-  LilyPond 1.8.1 was released. Get it <a href="download/">here</a>, or
-  read the <a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/ChangeLog?rev=1.1258.2.1&only_with_tag=lilypond_1_8&content-type=text/vnd.viewcvs-markup">ChangeLog</a>.
-</dd>
 
 
     
@@ -120,7 +121,7 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 
 <tr>
 <td>Development</td>
-<td>1.9.1</td>
+<td>1.9.2</td>
 <td><a href=http://lilypond.org/doc/v1.9/Documentation/out-www/>Documentation</a>,
 <a href=download/#1.9>download</a>.
 </td>
